--- a/FPU/jupyter/FPConvert.ipynb
+++ b/FPU/jupyter/FPConvert.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 223,
    "id": "05d07dc7",
    "metadata": {},
    "outputs": [
@@ -33,8 +33,11 @@
      "output_type": "stream",
      "text": [
       "6.103515625e-05\n",
+      "fpdecode: DENORM\n",
       "6.097555160522461e-05\n",
+      "fpdecode: DENORM\n",
       "5.960464477539063e-08\n",
+      "fpdecode: DENORM\n",
       "-0.0\n"
      ]
     }
@@ -52,9 +55,10 @@
     "FP64_EXP_LEN = 11\n",
     "FP64_EXP_BIAS = 2**(FP64_EXP_LEN-1)-1         # 1023\n",
     "\n",
-    "\n",
-    "FMT_FP16 = [1,FP16_MAN_LEN,FP16_EXP_BIAS,FP16_EXP_LEN]\n",
-    "FMT_FP32 = [1,FP32_MAN_LEN,FP32_EXP_BIAS,FP32_EXP_LEN]\n",
+    "FMT_FP16  = [1,FP16_MAN_LEN,FP16_EXP_BIAS,FP16_EXP_LEN]\n",
+    "FMT_FP32  = [1,FP32_MAN_LEN,FP32_EXP_BIAS,FP32_EXP_LEN]\n",
+    "FMT_FP32N = [3,FP32_MAN_LEN,FP32_EXP_BIAS,FP32_EXP_LEN]\n",
+    "#            \\._ 1: has_denorm 3: force_denorm \n",
     "\n",
     "# CAUTION: Python List and Binary indexes left-to-right\n",
     "# Call list reverse \"a.reverse()\"\" before indexing in verilog fashion\n",
@@ -88,12 +92,13 @@
     "    \n",
     "    if (is_all(exp,0) and has_denorm) or force_denorm:\n",
     "        # DENORM\n",
+    "        print(\"fpdecode: DENORM\")\n",
     "        t = float(bin2int(man))*2**(-man_len+1)\n",
     "        t = t*(2**(-exp_bias))\n",
     "    \n",
     "    # SPECIAL numbers are not dealt-with in this implementation\n",
     "    elif (is_all(exp,1)) :\n",
-    "        print(\"ERROR: SPECIAL NUMBER\");\n",
+    "        print(\"fpdecode: ERROR: SPECIAL NUMBER\");\n",
     "        return float(\"nan\")\n",
     "    else:\n",
     "        # NORM\n",
@@ -202,20 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 224,
    "id": "4c8a2d0f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "fpdecode: DENORM\n",
       "- pass - Smallest Positive Subnormal\n",
       "Expected:\t 0000000000000001\n",
       "Result  :\t 0000000000000001\n",
+      "fpdecode: DENORM\n",
       "- pass - Subnormal\n",
       "Expected:\t 0000001010101010\n",
       "Result  :\t 0000001010101010\n",
+      "fpdecode: DENORM\n",
       "- pass - Largest Subnormal\n",
       "Expected:\t 0000001111111111\n",
       "Result  :\t 0000001111111111\n",
@@ -240,20 +250,22 @@
       "- pass - Nearest Value to 1/3\n",
       "Expected:\t 0011010101010101\n",
       "Result  :\t 0011010101010101\n",
-      "ERROR: SPECIAL NUMBER\n",
+      "fpdecode: ERROR: SPECIAL NUMBER\n",
       "- pass - Infinity\n",
       "Expected:\t 0111110000000000\n",
       "Result  :\t 0111110000000000\n",
+      "fpdecode: DENORM\n",
       "- pass - Negative Zero\n",
       "Expected:\t 1000000000000000\n",
       "Result  :\t 1000000000000000\n",
+      "fpdecode: DENORM\n",
       "- pass - Positive Zero\n",
       "Expected:\t 0000000000000000\n",
       "Result  :\t 0000000000000000\n",
       "- pass - -2\n",
       "Expected:\t 1100000000000000\n",
       "Result  :\t 1100000000000000\n",
-      "ERROR: SPECIAL NUMBER\n",
+      "fpdecode: ERROR: SPECIAL NUMBER\n",
       "- FAIL -  -Infinity\n",
       "Expected:\t 1111111111111111\n",
       "Result  :\t 0111110000000000\n"
@@ -294,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 24,
    "id": "cac33029",
    "metadata": {
     "scrolled": true
@@ -306,7 +318,7 @@
        "[0, 0, 0, 0, 1]"
       ]
      },
-     "execution_count": 487,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,6 +336,247 @@
     "    return exp\n",
     "    \n",
     "convexp('01111110001',5,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "id": "a609b901",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fpdecode: DENORM\n",
+      "- pass - Unity\n",
+      "Expected:   0\n",
+      "Actual:     0.0\n",
+      "- FAIL -  Add Positive With Zero\n",
+      "Expected:   2\n",
+      "Actual:     4.0\n",
+      "- pass - Add Negative With Zero\n",
+      "Expected:   -2\n",
+      "Actual:     -2.0\n",
+      "- FAIL -  \n",
+      "Expected:   -0.16666666666666669\n",
+      "Actual:     -0.6669921875\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Note: For simplicity, ALL INTERNAL DATA is encoded in NON-NORMALIZED FORMAT\n",
+    "# that is: no hidden ones at the beginning of each encoded number, all digits are explicitly listed\n",
+    "\n",
+    "# Show Verbose Debug Messages\n",
+    "DEBUGMODE = 0;\n",
+    "\n",
+    "# This block locates at the beginning of the FIR pipeline\n",
+    "# Convert Normal FP16 Numbers to Internal Non-Normalized FMT (IFMT)\n",
+    "def fp16_to_ifmt(fmt, fp16):\n",
+    "    exp_len      = fmt[3]\n",
+    "    exp_bias     = fmt[2]\n",
+    "    man_len      = fmt[1]\n",
+    "    has_denorm   = fmt[0]==1\n",
+    "    force_denorm = fmt[0]==3\n",
+    "    \n",
+    "    # Convert and unpack\n",
+    "    pack = strdnum(half2binary(fp16))\n",
+    "    sgn = pack[0]\n",
+    "    exp = pack[1:FP16_EXP_LEN+1]\n",
+    "    man = pack[FP16_EXP_LEN+1:]\n",
+    "\n",
+    "    # Add the new bias value\n",
+    "    expn = bin2int(exp) - FP16_EXP_BIAS + exp_bias\n",
+    "\n",
+    "    # Deal with Denorm\n",
+    "    if(is_all(exp,0)):\n",
+    "        if(DEBUGMODE):\n",
+    "            print(\"DENORM\");\n",
+    "        man = man + [0]*(man_len - FP16_MAN_LEN)\n",
+    "    else:\n",
+    "        # This causes problem when man_len < FP16_MAX_LEN,\n",
+    "        # which shouldn't happen in this project, ignore that\n",
+    "        man = [1] + man + [0]*(man_len - FP16_MAN_LEN - 1)\n",
+    "    \n",
+    "    # Save new EXP\n",
+    "    exp = int2bin(expn, exp_len)\n",
+    "    if(DEBUGMODE):\n",
+    "        print(sgn, numdstr(exp), numdstr(man))\n",
+    "        \n",
+    "    return [int(sgn)] + exp + man\n",
+    "    \n",
+    "    \n",
+    "def fpadd_ifmt(fmt, packa, packb):\n",
+    "    exp_len      = fmt[3]\n",
+    "    exp_bias     = fmt[2]\n",
+    "    man_len      = fmt[1]\n",
+    "    has_denorm   = fmt[0]==1\n",
+    "    force_denorm = fmt[0]==3\n",
+    "    \n",
+    "    # Unpack Data\n",
+    "    # Treat always as de-norm with exponent\n",
+    "    # that is: no hidden 1\n",
+    "    sgna = packa[0]\n",
+    "    expa = packa[1:exp_len+1]\n",
+    "    mana = packa[exp_len+1:]\n",
+    "    \n",
+    "    sgnb = packb[0]\n",
+    "    expb = packb[1:exp_len+1]\n",
+    "    manb = packb[exp_len+1:]\n",
+    " \n",
+    "    #          ea > eb     ea < eb\n",
+    "    # sa sb  sy    my     sy    my\n",
+    "    #  0  0   0  ma + mb   0  ma + mb\n",
+    "    #  0  1   0  ma - mb   1  mb - ma\n",
+    "    #  1  0   1  ma - mb   0  mb - ma\n",
+    "    #  1  1   1  ma + mb   1  ma + mb\n",
+    "    #\n",
+    "    # addsub: ma + mb: 0\n",
+    "    #         ma - mb: 1\n",
+    "    #         mb - ma: 2\n",
+    "    # \n",
+    "    # This implementation is not very elegant, \n",
+    "    # you should be able to simply subtract and flip negative values\n",
+    "    # Then, the flags are modified accordingly\n",
+    "    #\n",
+    "    # I did this trying to reduce bit-flipping (to reduce power)\n",
+    "    # But the inversion in the subtractor is doing bit-flipping anyway.\n",
+    "    \n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"A: \", sgna, numdstr(expa), numdstr(mana))\n",
+    "        print(\"B: \", sgnb, numdstr(expb), numdstr(manb))\n",
+    "    # - PIPELINE STEP 1: exp compare\n",
+    "    expa_sub_b = bin2int(expa) - bin2int(expb)\n",
+    "    expa_lt_b = (expa_sub_b > 0)\n",
+    "    \n",
+    "    if (sgna==sgnb):\n",
+    "        sign_diff = 0;\n",
+    "        sgny = sgna\n",
+    "        addsub = 0\n",
+    "    elif (sgnb==1):\n",
+    "        sign_diff = 1;\n",
+    "        if(expa_lt_b):\n",
+    "            sgny = 0\n",
+    "            addsub = 1\n",
+    "        else:\n",
+    "            sgny = 1\n",
+    "            addsub = 2\n",
+    "    else:\n",
+    "        sign_diff = 1;\n",
+    "        if(expa_lt_b):\n",
+    "            sgny = 1\n",
+    "            addsub = 1\n",
+    "        else:\n",
+    "            sgny = 0\n",
+    "            addsub = 2\n",
+    "            \n",
+    "    \n",
+    "    # - PIPELINE STEP 2 (probably 2-stages): shift\n",
+    "    # Shift the smaller value to the larger value\n",
+    "    if(expa_lt_b):\n",
+    "        expy = expa\n",
+    "        manb = ([0]*(abs(expa_sub_b)) + manb)[0:len(manb)];\n",
+    "    else:\n",
+    "        expy = expb\n",
+    "        mana = ([0]*(abs(expa_sub_b)) + mana)[0:len(mana)];\n",
+    "\n",
+    "    # - PIPELINE STEP 3 (probably 2-stages): Sum\n",
+    "    if(addsub==0):\n",
+    "        many = int2bin(bin2int(mana)+bin2int(manb),len(mana)+1)\n",
+    "    elif(addsub==1):\n",
+    "        many = int2bin(bin2int(mana)-bin2int(manb),len(mana)+1)\n",
+    "    else:\n",
+    "        many = int2bin(bin2int(manb)-bin2int(mana),len(mana)+1)\n",
+    "        \n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"Addsub: \",addsub)\n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"A: \", sgna, numdstr(expa), numdstr(mana))\n",
+    "        print(\"B: \", sgnb, numdstr(expb), numdstr(manb))\n",
+    "        print(\"Y: \", sgny, numdstr(expy), numdstr(many), \"Before ADJ\")\n",
+    "        \n",
+    "    # - PIPELINE STEP 4: Normalize - detect\n",
+    "    \n",
+    "    if(is_all(many,0)):\n",
+    "        # Zero\n",
+    "        return [0] + [0]*exp_len + [0]*man_len\n",
+    "    # Find the initial one\n",
+    "    many_zerocount = len(many) - len(numdstr(many).lstrip('0'));\n",
+    "    \n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"Zero Count:\", many_zerocount)\n",
+    "    # - PIPELINE STEP 5: Normalize - Shift\n",
+    "    # normalize many by shifiting it to the left\n",
+    "    many = (many+[0]*many_zerocount)[many_zerocount+1:len(many)-1]\n",
+    "    if(sign_diff):\n",
+    "        expyn = bin2int(expy)+many_zerocount+1\n",
+    "    else:\n",
+    "        expyn = bin2int(expy)+many_zerocount+2\n",
+    "    expy = int2bin(expyn,len(expy))\n",
+    "\n",
+    "        \n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"Y: \", sgny, numdstr(expy), numdstr(many))\n",
+    "    return [int(sgny)] + expy + many\n",
+    "\n",
+    "def fpadd_verif(fpa, fpb, msg):\n",
+    "    fpy = fpa + fpb\n",
+    "    fpa = fp16_to_ifmt(FMT_FP32N,fpa)\n",
+    "    fpb = fp16_to_ifmt(FMT_FP32N,fpb)\n",
+    "    k = fpdecode(FMT_FP32, fpadd_ifmt(FMT_FP32N, fpa, fpb));\n",
+    "    if(k==fpy):\n",
+    "        print('- pass -', msg)\n",
+    "    else:\n",
+    "        print('- FAIL - ', msg)\n",
+    "    print(\"Expected:  \", fpy);\n",
+    "    print(\"Actual:    \", k)\n",
+    "\n",
+    "fpadd_verif(-1,1,'Unity')\n",
+    "fpadd_verif(2,0,'Add Positive With Zero')\n",
+    "fpadd_verif(-2,0,'Add Negative With Zero')\n",
+    "fpadd_verif(-0.5,1/3,'Fr')\n",
+    "# Known Issue: 0 + (-2)  or (-2) + 0 = -1\n",
+    "# 0 and other DENORM requries special attention..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "ccc0a1e5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 01111110 10000000000000000000000\n",
+      "1 01111101 10101010101000000000000\n",
+      "DENORM\n",
+      "0 01110000 11111111110000000000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'00111000011111111110000000000000'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "fp16_to_internal_fmt(FMT_FP32N, -0.5)\n",
+    "fp16_to_internal_fmt(FMT_FP32N, -1/3)\n",
+    "# Largest Denorm Number\n",
+    "numdstr(fp16_to_internal_fmt(FMT_FP32N, 0.000060975552))"
    ]
   }
  ],
