--- a/FPU/jupyter/FPConvert.ipynb
+++ b/FPU/jupyter/FPConvert.ipynb
@@ -340,8 +340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "id": "a609b901",
+   "execution_count": 317,
+   "id": "d7daa474",
    "metadata": {
     "scrolled": false
    },
@@ -360,7 +360,7 @@
       "- pass - Add Negative With Zero\n",
       "Expected:   -2\n",
       "Actual:     -2.0\n",
-      "- FAIL -  \n",
+      "- FAIL -  Infinite Fractal\n",
       "Expected:   -0.16666666666666669\n",
       "Actual:     -0.6669921875\n"
      ]
@@ -537,36 +537,26 @@
     "fpadd_verif(-1,1,'Unity')\n",
     "fpadd_verif(2,0,'Add Positive With Zero')\n",
     "fpadd_verif(-2,0,'Add Negative With Zero')\n",
-    "fpadd_verif(-0.5,1/3,'Fr')\n",
+    "fpadd_verif(-0.5,1/3,'Infinite Fractal')\n",
     "# Known Issue: 0 + (-2)  or (-2) + 0 = -1\n",
     "# 0 and other DENORM requries special attention..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "ccc0a1e5",
+   "execution_count": 316,
+   "id": "5d4616e0",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 01111110 10000000000000000000000\n",
-      "1 01111101 10101010101000000000000\n",
-      "DENORM\n",
-      "0 01110000 11111111110000000000000\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'00111000011111111110000000000000'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
