--- a/FPU/jupyter/FPConvert.ipynb
+++ b/FPU/jupyter/FPConvert.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 374,
    "id": "05d07dc7",
    "metadata": {},
    "outputs": [
@@ -77,6 +77,15 @@
     "indexrev = lambda a, i : a[len(a)-1-i]\n",
     "# Check If an Array Only Has One Variety of Element\n",
     "is_all   = lambda a, e : (a.count(e)==len(a))\n",
+    "\n",
+    "# BINARY TOOLS\n",
+    "xor      = lambda a, b       : int((a and not b) or (not a and b))\n",
+    "# Word size is strictly defined by the input vectors\n",
+    "binadd   = lambda ba, bb, bci: int2bin(bin2int(ba)+bin2int(bb)+bci,max(len(ba),len(bb))+1)\n",
+    "# Sign Extension\n",
+    "binsext  = lambda b, ws      : [b[0]]*(ws-len(b))+b;\n",
+    "# Negate Binary Value; word size unchanged\n",
+    "binneg   = lambda b          : binadd(list(1-i for i in b),[0],1)[1:len(b)+1];\n",
     "\n",
     "# Convert binary array to Python float value\n",
     "def fpdecode(fmt,pack):\n",
@@ -158,7 +167,6 @@
     "    return [int(sgn)] + exp + man;\n",
     "\n",
     "\n",
-    "\n",
     "man = [0,0,0,0,0,0,0,0,0,0]\n",
     "exp = [0,0,0,0,1]\n",
     "pack = [0] + exp + man;\n",
@@ -210,7 +218,7 @@
    "execution_count": 224,
    "id": "4c8a2d0f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -340,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
-   "id": "d7daa474",
+   "execution_count": 442,
+   "id": "7e1a1741",
    "metadata": {
     "scrolled": false
    },
@@ -350,19 +358,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 1110000000000000000000000\n",
+      "after ALU: exp: 01111111 many: 0000000000000000000000000\n",
       "fpdecode: DENORM\n",
       "- pass - Unity\n",
       "Expected:   0\n",
       "Actual:     0.0\n",
-      "- FAIL -  Add Positive With Zero\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 0000000000000000000000000\n",
+      "after ALU: exp: 10000000 many: 0010000000000000000000000\n",
+      "many_zerocount: 2\n",
+      "after SFT: exp: 10000000 many: 000000000000000000000000\n",
+      "- pass - Add Positive With Zero\n",
       "Expected:   2\n",
-      "Actual:     4.0\n",
+      "Actual:     2.0\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 0000000000000000000000000\n",
+      "after ALU: exp: 10000000 many: 0010000000000000000000000\n",
+      "many_zerocount: 2\n",
+      "after SFT: exp: 10000000 many: 000000000000000000000000\n",
       "- pass - Add Negative With Zero\n",
       "Expected:   -2\n",
       "Actual:     -2.0\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 1110101010101100000000000\n",
+      "after ALU: exp: 01111110 many: 0000101010101100000000000\n",
+      "many_zerocount: 4\n",
+      "after SFT: exp: 01111100 many: 101010110000000000000000\n",
       "- FAIL -  Infinite Fractal\n",
       "Expected:   -0.16666666666666669\n",
-      "Actual:     -0.6669921875\n"
+      "Actual:     -0.1669921875\n"
      ]
     }
    ],
@@ -409,7 +439,7 @@
     "    return [int(sgn)] + exp + man\n",
     "    \n",
     "    \n",
-    "def fpadd_ifmt(fmt, packa, packb):\n",
+    "def fpadd_fmt(fmt, packa, packb):\n",
     "    exp_len      = fmt[3]\n",
     "    exp_bias     = fmt[2]\n",
     "    man_len      = fmt[1]\n",
@@ -417,8 +447,6 @@
     "    force_denorm = fmt[0]==3\n",
     "    \n",
     "    # Unpack Data\n",
-    "    # Treat always as de-norm with exponent\n",
-    "    # that is: no hidden 1\n",
     "    sgna = packa[0]\n",
     "    expa = packa[1:exp_len+1]\n",
     "    mana = packa[exp_len+1:]\n",
@@ -545,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "5d4616e0",
+   "id": "4e58e340",
    "metadata": {
     "scrolled": true
    },
@@ -568,6 +596,246 @@
     "# Largest Denorm Number\n",
     "numdstr(fp16_to_internal_fmt(FMT_FP32N, 0.000060975552))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "id": "3356f8cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 1110000000000000000000000\n",
+      "after ALU: exp: 01111111 many: 0000000000000000000000000\n",
+      "fpdecode: DENORM\n",
+      "- pass - Unity\n",
+      "Expected:   0\n",
+      "Actual:     0.0\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 0000000000000000000000000\n",
+      "after ALU: exp: 10000000 many: 0010000000000000000000000\n",
+      "many_zerocount: 2\n",
+      "after SFT: exp: 10000000 many: 10000000000000000000000000\n",
+      "0 10000000 0000000000000000000000000\n",
+      "- FAIL -  Add Positive With Zero\n",
+      "Expected:   2\n",
+      "Actual:     8.0\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 0000000000000000000000000\n",
+      "after ALU: exp: 10000000 many: 0010000000000000000000000\n",
+      "many_zerocount: 2\n",
+      "after SFT: exp: 10000000 many: 10000000000000000000000000\n",
+      "1 10000000 0000000000000000000000000\n",
+      "- FAIL -  Add Negative With Zero\n",
+      "Expected:   -2\n",
+      "Actual:     -8.0\n",
+      "ALU:\n",
+      "A: 0011000000000000000000000\n",
+      "B: 1111111001100110100000000\n",
+      "after ALU: exp: 10000000 many: 0010111001100110100000000\n",
+      "many_zerocount: 2\n",
+      "after SFT: exp: 10000000 many: 10111001100110100000000000\n",
+      "1 10000000 0111001100110100000000000\n",
+      "- FAIL -  Infinite Fractal\n",
+      "Expected:   -2.9\n",
+      "Actual:     -11.60009765625\n",
+      "1 10000000 10111001101000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fpadd_ifmt(fmt, packa, packb):\n",
+    "    exp_len      = fmt[3]\n",
+    "    exp_bias     = fmt[2]\n",
+    "    man_len      = fmt[1]\n",
+    "    has_denorm   = fmt[0]==1\n",
+    "    force_denorm = fmt[0]==3\n",
+    "    \n",
+    "    # Unpack Data\n",
+    "    # Caution: Here we're assuming that all incoming data are in denorm format\n",
+    "    # They have exponents (unlike IEEE terminalogy), but also have an explicit 1\n",
+    "    sgna = packa[0]\n",
+    "    expa = packa[1:exp_len+1]\n",
+    "    mana = [0]*2 + packa[exp_len+1:]\n",
+    "    \n",
+    "    sgnb = packb[0]\n",
+    "    expb = packb[1:exp_len+1]\n",
+    "    manb = [0]*2 + packb[exp_len+1:]\n",
+    "    \n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"A: \", sgna, numdstr(expa), numdstr(mana))\n",
+    "        print(\"B: \", sgnb, numdstr(expb), numdstr(manb))\n",
+    "    \n",
+    "    # - PIPELINE STEP 1: Exponent Compare \n",
+    "    expa_sub_b = bin2int(expa) - bin2int(expb)\n",
+    "    expa_gt_b = (expa_sub_b > 0)\n",
+    "    \n",
+    "    # Addsub Control Signals:\n",
+    "    #          ea > eb     ea < eb\n",
+    "    #            SRB         SRA\n",
+    "    # sa sb  sy    my     sy    my\n",
+    "    #  0  0   0  ma + mb   0  mb + ma\n",
+    "    #  0  1   0  ma - mb   1  mb - ma\n",
+    "    #  1  0   1  ma - mb   0  mb - ma\n",
+    "    #  1  1   1  ma + mb   1  mb + ma\n",
+    "    #\n",
+    "    # addsub: ma + mb: 0\n",
+    "    #         ma - mb: 1\n",
+    "    #         mb - ma: 2\n",
+    "    \n",
+    "    ctrl_manxch = -expa_gt_b         # Exchange ALU Inputs\n",
+    "    ctrl_mansub = xor(sgna,sgnb)     # Subtract Mode\n",
+    "    if(expa_gt_b):\n",
+    "        sgny = sgna;\n",
+    "    else:\n",
+    "        sgny = sgnb;\n",
+    "        \n",
+    "    # - PIPELINE STEP 2: Shift\n",
+    "    # Shifter\n",
+    "    if(expa_gt_b):\n",
+    "        expy = expa\n",
+    "        manb = ([0]*(abs(expa_sub_b)) + manb)[0:len(manb)];\n",
+    "    else:\n",
+    "        expy = expb\n",
+    "        mana = ([0]*(abs(expa_sub_b)) + mana)[0:len(mana)];\n",
+    "    \n",
+    "    # - PIPELINE STEP 3: Addsub\n",
+    "    # ALU MUX\n",
+    "    if expa_gt_b:\n",
+    "        alua = mana\n",
+    "        alub = manb\n",
+    "    else:\n",
+    "        alua = manb\n",
+    "        alub = mana\n",
+    "\n",
+    "    if ctrl_mansub:\n",
+    "        alub = binneg(alub)\n",
+    "    many = binadd(alua,alub,0);\n",
+    "    many = many[1:]\n",
+    "    print(\"ALU:\")\n",
+    "    print(\"A:\", numdstr(alua))\n",
+    "    print(\"B:\", numdstr(alub))\n",
+    "    print(\"after ALU: exp:\",numdstr(expy),\"many:\", numdstr(many));\n",
+    "    \n",
+    "    # - PIPELINE STEP 4: Normalize - detect\n",
+    "    if(is_all(many,0)):\n",
+    "        # Zero\n",
+    "        return [0] + [0]*exp_len + [0]*man_len\n",
+    "    \n",
+    "    # Find the initial one\n",
+    "    many_zerocount = len(many) - len(numdstr(many).lstrip('0'));\n",
+    "    \n",
+    "    # - PIPELINE STEP 5: Normalize - Shift\n",
+    "    \n",
+    "    many = (many+[0]*(many_zerocount+1))[many_zerocount:]\n",
+    "    expyn = bin2int(expy)+2-many_zerocount\n",
+    "    expy = int2bin(expyn,len(expy))\n",
+    "    print(\"many_zerocount:\", many_zerocount)\n",
+    "    print(\"after SFT: exp:\",numdstr(expy),\"many:\", numdstr(many));\n",
+    "    \n",
+    "    # Deal with denorm\n",
+    "    if(is_all(expy,0)):\n",
+    "        print(\"Denorm\")\n",
+    "        return [int(sgny)] + [0]*exp_len + many[0:man_len]\n",
+    "    else:\n",
+    "        a = numdstr([int(sgny)] + expy + many[1:]);\n",
+    "        print(a[0],a[1:FP32_EXP_LEN+1],a[FP32_EXP_LEN+1:])\n",
+    "        return [int(sgny)] + expy + many[1:]\n",
+    "    \n",
+    "def fpadd_verif(fpa, fpb, msg):\n",
+    "    fpy = fpa + fpb\n",
+    "    fpa = fp16_to_ifmt(FMT_FP32N,fpa)\n",
+    "    fpb = fp16_to_ifmt(FMT_FP32N,fpb)\n",
+    "    k = fpdecode(FMT_FP32, fpadd_ifmt(FMT_FP32N, fpa, fpb));\n",
+    "    if(k==fpy):\n",
+    "        print('- pass -', msg)\n",
+    "    else:\n",
+    "        print('- FAIL - ', msg)\n",
+    "    print(\"Expected:  \", fpy);\n",
+    "    print(\"Actual:    \", k)\n",
+    "\n",
+    "fpadd_verif(-1,1,'Unity')\n",
+    "fpadd_verif(2,0,'Add Positive With Zero')\n",
+    "fpadd_verif(-2,0,'Add Negative With Zero')\n",
+    "ta = 0.1;\n",
+    "tb = -3;\n",
+    "fpadd_verif(ta,tb,'Infinite Fractal')\n",
+    "a = numdstr(fp16_to_internal_fmt(FMT_FP32N, ta + tb))\n",
+    "print(a[0],a[1:FP32_EXP_LEN+1],a[FP32_EXP_LEN+1:])\n",
+    "# Known Issue: 0 + (-2)  or (-2) + 0 = -1\n",
+    "# 0 and other DENORM requries special attention..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "id": "4a048f7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 01111111 10000000000000000000000\n",
+      "0 01111111 10000000000000000000000\n",
+      "A:  1 01111111 0010000000000000000000000\n",
+      "B:  0 01111111 0010000000000000000000000\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 1110000000000000000000000\n",
+      "after ALU: many:  0000000000000000000000000\n",
+      "fpdecode: DENORM\n",
+      "- pass - Unity\n",
+      "Expected:   0\n",
+      "Actual:     0.0\n",
+      "0 10000000 10000000000000000000000\n",
+      "DENORM\n",
+      "0 01110000 00000000000000000000000\n",
+      "A:  0 10000000 0010000000000000000000000\n",
+      "B:  0 01110000 0000000000000000000000000\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 0000000000000000000000000\n",
+      "after ALU: many:  0010000000000000000000000\n",
+      "after SFT: many:  0000000000000000000000000\n",
+      "- pass - Add Positive With Zero\n",
+      "Expected:   2\n",
+      "Actual:     2.0\n",
+      "1 10000000 10000000000000000000000\n",
+      "DENORM\n",
+      "0 01110000 00000000000000000000000\n",
+      "A:  1 10000000 0010000000000000000000000\n",
+      "B:  0 01110000 0000000000000000000000000\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 0000000000000000000000000\n",
+      "after ALU: many:  0010000000000000000000000\n",
+      "after SFT: many:  0000000000000000000000000\n",
+      "- pass - Add Negative With Zero\n",
+      "Expected:   -2\n",
+      "Actual:     -2.0\n",
+      "1 01111110 10000000000000000000000\n",
+      "0 01111101 10101010101000000000000\n",
+      "A:  1 01111110 0010000000000000000000000\n",
+      "B:  0 01111101 0010101010101000000000000\n",
+      "ALU:\n",
+      "A: 0010000000000000000000000\n",
+      "B: 1110101010101100000000000\n",
+      "after ALU: many:  0000101010101100000000000\n",
+      "after SFT: many:  1010101100000000000000000\n",
+      "- FAIL -  Infinite Fractal\n",
+      "Expected:   -0.16666666666666669\n",
+      "Actual:     -2.671875\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
