--- a/FPU/jupyter/FPConvert.ipynb
+++ b/FPU/jupyter/FPConvert.ipynb
@@ -180,7 +180,7 @@
    "execution_count": 330,
    "id": "4c8a2d0f",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -258,6 +258,27 @@
     "fp16verify('0000000000000000','Positive Zero')\n",
     "fp16verify('1100000000000000','-2')\n",
     "fp16verify('1111111111111111','-Infinity')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 476,
+   "id": "3948ea9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 476,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fpencode(FMT_FP16,1+30.76e-3)"
    ]
   },
   {
@@ -494,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "id": "14b33226",
+   "id": "451f317e",
    "metadata": {},
    "outputs": [
     {
@@ -646,29 +667,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 472,
    "id": "e60e1473",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01000000110010000000000000000000\n",
-      "00111111110000000000000000000000\n",
-      "A:  0 10000001 0010010000000000000000000 len(mana): 25\n",
-      "B:  0 01111111 0010000000000000000000000\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, -2, 1, 1, 0, 0]\n",
-      "01001000000000000000000 len: 23\n",
-      "10000010\n",
-      "Expected:   4.5\n",
-      "Actual:     4.5\n"
+      "\n",
+      "- TEST: 12345 x 12 = 148140\n",
+      "Expected:   148140\n",
+      "Actual:     148128.0\n",
+      "Error:      8.10045e-05\n",
+      "\n",
+      "- TEST: 1024 x 0 = 0\n",
+      "Expected:   0\n",
+      "Actual:     7.450580596923828e-09\n",
+      "\n",
+      "- TEST: 0 x 768 = 0\n",
+      "Expected:   0\n",
+      "Actual:     3.725290298461914e-09\n",
+      "\n",
+      "- TEST: 1.2345 x 720.01 = 888.8523449999999\n",
+      "Expected:   888.8523449999999\n",
+      "Actual:     888.75\n",
+      "Error:      1.15143e-04\n"
      ]
     }
    ],
    "source": [
+    "DEBUGMODE = 0;\n",
     "\n",
     "def fpmul_ifmt(fmt, packa, packb):\n",
     "    exp_len      = fmt[3]\n",
@@ -687,9 +718,10 @@
     "    sgnb = packb[0]\n",
     "    expb = packb[1:exp_len+1]\n",
     "    manb = [0]*2+packb[exp_len+1:]\n",
+    "    if(DEBUGMODE):\n",
+    "        print(\"A: \", sgna, numdstr(expa), numdstr(mana),\"len(mana):\",len(mana))\n",
+    "        print(\"B: \", sgnb, numdstr(expb), numdstr(manb))\n",
     "    \n",
-    "    print(\"A: \", sgna, numdstr(expa), numdstr(mana),\"len(mana):\",len(mana))\n",
-    "    print(\"B: \", sgnb, numdstr(expb), numdstr(manb))\n",
     "    # PIPELINE - STEP 1 - Booth Encoder\n",
     "    # Combinational, decomposes mantissa A into booth recording\n",
     "    mana_br = boothr4_encode(mana)\n",
@@ -699,19 +731,20 @@
     "    else:\n",
     "        sgny = 1;\n",
     "    \n",
-    "    # PIPELINE - STEP 2-\n",
+    "    # PIPELINE - STEP 2~3 - Booth Multiply  (Produce Partial Product)\n",
+    "    # PIPELINE - STEP 4   - Booth Summation (Reuses the adder)\n",
     "    many = boothr4_slmult(mana_br,manb);\n",
     "    many = many[4:man_len+4]\n",
     "    if(DEBUGMODE):\n",
     "        print(mana_br)\n",
     "        print(numdstr(many),\"len:\",len(many))\n",
     "    \n",
-    "    # PIPELINE - STEP 2\n",
+    "    # PIPELINE - STEP 4   - New Exponent Calculation \n",
     "    expy = int2bin(bin2int(expa)+bin2int(expb)-exp_bias+1,exp_len)\n",
-    "    print(numdstr(expy))\n",
+    "    if(DEBUGMODE):\n",
+    "        print(numdstr(expy))\n",
     "    \n",
-    "    # - PIPELINE STEP 5: Normalize - Shift\n",
-    "        \n",
+    "    # - PIPELINE STEP 5: Normalize - Shift (Reuses Hardware)    \n",
     "    # Find the initial one\n",
     "    many_zerocount = len(many) - len(numdstr(many).lstrip('0'));\n",
     "    many = (many+[0]*(many_zerocount+1))[many_zerocount:]\n",
@@ -734,40 +767,49 @@
     "\n",
     "def fpmul_verif(fpa, fpb, msg):\n",
     "    fpy = fpa * fpb\n",
-    "    fpa = fp16_to_ifmt(FMT_FP32N,fpa)\n",
-    "    fpb = fp16_to_ifmt(FMT_FP32N,fpb)\n",
-    "    print(numdstr(fpa))\n",
-    "    print(numdstr(fpb))\n",
-    "    fpyi = fpmul_ifmt(FMT_FP32N, fpa, fpb)\n",
+    "    bfpa = fp16_to_ifmt(FMT_FP32N,fpa)\n",
+    "    bfpb = fp16_to_ifmt(FMT_FP32N,fpb)\n",
+    "    if(DEBUGMODE):\n",
+    "        print(numdstr(bfpa))\n",
+    "        print(numdstr(bfpb))\n",
+    "    fpyi = fpmul_ifmt(FMT_FP32N, bfpa, bfpb)\n",
     "    k = fpdecode(FMT_FP32, fpyi);\n",
     "    #if(k==fpy):\n",
     "    #    print('- pass -', msg)\n",
     "    #else:\n",
     "    #    print('- FAIL - ', msg)\n",
-    "    print(\"Expected:  \", fpy);\n",
+    "    print(\"\\n- TEST:\",fpa,\"x\",fpb,\"=\",fpy)\n",
+    "    print(\"Expected:  \", fpy)\n",
     "    print(\"Actual:    \", k)\n",
+    "    if(fpy!=0):\n",
+    "        print(\"Error:     \", '{:.5e}'.format(abs(fpy-k)/fpy));\n",
     "    \n",
-    "fpmul_verif(4.5,1,'')"
+    "fpmul_verif(12345,12,'')\n",
+    "fpmul_verif(1024,0,'')\n",
+    "fpmul_verif(0,768,'')\n",
+    "fpmul_verif(12345e-4,720.01,'')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
-   "id": "ba97d5a0",
+   "execution_count": 479,
+   "id": "9100ae06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "57005"
+       "6"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 479,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(boothr4_encode([0]*10))"
+   ]
   }
  ],
  "metadata": {
